force-app/main/default/objects/FSA_Service_Territory_Mapping__c/FSA_Service_Territory_Mapping__c.object-meta.xml
<CustomObject>
    <label>FSA &amp; Service Territory Mapping</label>
    <nameField>
        <label>FSA Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSA &amp; Service Territory Mappings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>