force-app/main/default/objects/FSA_Service_Territory_Mapping__c/fields/CPQ_Distance_Adj_Factor__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Distance_Adj_Factor__c</fullName>
    <formula>CASE( TEXT( CPQ_Service_Zone__c ) , 
&apos;1&apos;,  $Setup.CPQ_Settings__c.CPQ_DA_Region_1__c, 
&apos;2&apos;, $Setup.CPQ_Settings__c.CPQ_DA_Region_2__c,
&apos;3&apos;, $Setup.CPQ_Settings__c.CPQ_DA_Region_3__c,
&apos;4&apos;, $Setup.CPQ_Settings__c.CPQ_DA_Region_4__c,
&apos;5&apos;, $Setup.CPQ_Settings__c.CPQ_DA_Region_5__c,
&apos;6&apos;, $Setup.CPQ_Settings__c.CPQ_DA_Region_6__c,
&apos;7&apos;, $Setup.CPQ_Settings__c.CPQ_DA_Region_7__c,
$Setup.CPQ_Settings__c.CPQ_DA_Out_of_Service_Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance Adjustment Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>