force-app/main/default/objects/FSA_Service_Territory_Mapping__c/fields/CPQ_Service_Branch__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Service_Branch__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Branch</label>
    <referenceTo>CPQ_Service_Branches__c</referenceTo>
    <relationshipLabel>FSA &amp; Service Territory Mappings</relationshipLabel>
    <relationshipName>FSA_Mappings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>