force-app/main/default/objects/FSA_Service_Territory_Mapping__c/fields/CPQ_Service_Zone__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Service_Zone__c</fullName>
    <label>Service Zone</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>Out of Service Area</fullName>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
            <value>
                <fullName>5</fullName>
                <isActive>false</isActive>
                <label>5</label>
            </value>
            <value>
                <fullName>6</fullName>
                <isActive>false</isActive>
                <label>6</label>
            </value>
            <value>
                <fullName>7</fullName>
                <isActive>false</isActive>
                <label>7</label>
            </value>
            <value>
                <fullName>8</fullName>
                <isActive>false</isActive>
                <label>8</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>