force-app/main/default/objects/FSA_Service_Territory_Mapping__c/fields/FSA__c.field-meta.xml
<CustomField>
    <fullName>FSA__c</fullName>
    <externalId>true</externalId>
    <label>FSA</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>