force-app/main/default/objects/FSA_Service_Territory_Mapping__c/fields/Sales_Territory__c.field-meta.xml
<CustomField>
    <fullName>Sales_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Territory</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The selected sales territory is inactive</errorMessage>
        <filterItems>
            <field>Sales_Territory__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Territory__c</referenceTo>
    <relationshipLabel>FSA &amp; Service Territory Mappings</relationshipLabel>
    <relationshipName>FSA_Service_Territory_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>