force-app/main/default/objects/FSA_Service_Territory_Mapping__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>FSA &amp; Service Territory Mappings</relationshipLabel>
    <relationshipName>FSA_Service_Territory_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>