force-app/main/default/objects/FSA_Service_Territory_Mapping__c/validationRules/CPQ_Valid_FSA.validationRule-meta.xml
<ValidationRule>
    <fullName>CPQ_Valid_FSA</fullName>
    <active>true</active>
    <errorConditionFormula>OR(NOT(REGEX(  FSA__c , &quot;[A-Z]\\d[A-Z]&quot;)) 
, LEN(FSA__c) !=3)</errorConditionFormula>
    <errorDisplayField>FSA__c</errorDisplayField>
    <errorMessage>Please enter a FSA with a A#A format.</errorMessage>
</ValidationRule>