force-app/main/default/objects/FSA_Service_Territory_Mapping__c/validationRules/Prevent_Inactive_Service_Territory.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Inactive_Service_Territory</fullName>
    <active>true</active>
    <errorConditionFormula>IF(Service_Territory__r.IsActive=False,True,False)</errorConditionFormula>
    <errorDisplayField>Service_Territory__c</errorDisplayField>
    <errorMessage>Selected Service Territory is Inactive. Please choose an active Service Territory</errorMessage>
</ValidationRule>