force-app/main/default/objects/FSA_Service_Territory_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FSA__c</columns>
    <columns>Province__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>Sales_Territory__c</columns>
    <columns>CPQ_Service_Branch__c</columns>
    <columns>CPQ_Service_Zone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>